# epaper_bw

./: .aider.chat.history.md  .aider.input.history  .gitignore  CMakeLists.txt  Doxyfile  GoogleSans60.c  README.md  TODO.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults
components/Adafruit_BusIO/: CMakeLists.txt
components/Adafruit_NeoPixel/: CMakeLists.txt
components/GDEY0154D67/: CMakeLists.txt
components/GDEY0154D67/include/: GDEY0154D67.h
components/GDEY0154D67/src/: GDEY0154D67.cpp
components/GxEPD2/: CMakeLists.txt
components/lvgl/: GoogleSans10.c  GoogleSans100.c  GoogleSans15.c  GoogleSans20.c  GoogleSans60.c  GoogleSansBold100.c  GoogleSansBold140.c  GoogleSansBold40.c  GoogleSansBold60.c  lv_conf.h
components/lvgl/src/extra/libs/fsdrv/: lv_fs_stdio.c
docs/: A32-GDEM0154F51H.rar  A32-GDEY0154F51.rar  A8266-GDEY1085F51.rar  GDEY0154D67_fix_instructions.md  GDEY0154D67_init_comparison.md  Logo-ferrari.jpg~  N1W_RS232-TTL_setup.md  RS232_protocol.md  RULES.md  ScannerSetup.md  planEpaperQr.prompt.md  scanner_pc_probe.md
docs/A32-GDEM0154F51H/A32-GDEM0154F51H-F-20250106/GDEM0154F51H_Arduino/: GDEM0154F51H_Arduino.ino
docs/A32-GDEY0154F51/A32-GDEY0154F51-20230810/GDEY0154F51_Arduino/: Ap_29demo.h  Display_EPD_W21.h  GDEY0154F51_Arduino.ino
docs/A8266-GDEY1085F51/A8266-GDEY1085F51/A8266-GDEY01085F51-F-20251028/GDEY1085F51_Arduino/: Ap_29demo.h  Display_EPD_W21.cpp  Display_EPD_W21.h  Display_EPD_W21_spi.cpp  Display_EPD_W21_spi.h  GDEY1085F51_Arduino.ino
docs/Internal/fonts_disabled/: GoogleSans10.c  GoogleSans20.c
docs/usb-monitor@maurofain.it/: extension.js  metatdata.json
include/: conditional_log.h  display.h  led_control.h  lv_conf.h  master_protocol.h  pin_config.h  scanner_control.h
main/: CMakeLists.txt  idf_component.yml
scripts/: generate_doxygen.sh  rs232_protocol_test.py  scanner_pc_probe.py  sync_to_mh1001.sh
src/: led_control.cpp  main.cpp  master_protocol.cpp  scanner_control.cpp
src/ui/: logo.c
src/ui/fonts/: GoogleSans15.c  user_fonts.h
tools/epaper-tester/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  style.css
